--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -1,6 +1,7 @@
  <div class="container">
 	<div class="jumbotron text-center">
 		<h1 class="product-name"> {{ product.name }} </h1>
+		
 	</div>
 </div>
 
@@ -28,6 +29,20 @@
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<p class="product-name"> <b> <a href="#/products/{{activeCategory._id}}/{{product._id}}"> {{ product.name }} </a> </b> </p>		
+				<p>
+					<div class="average-rating" ng-controller="ratingController as rating">
+							<!-- <div star-rating ng-model="rating.rating1" max="10" on-rating-select="rating.rateFunction(rating)"></div> -->
+							<!-- <div star-rating ng-model="rating.rating2" readonly="rating.isReadonly" on-rating-select="rating.rateFunction(rating)"></div> -->
+							<!-- <label>
+								<input type="checkbox" ng-model="rating.isReadonly"/>
+								Is Readonly
+							</label>
+
+							<div><strong>Rating 1:</strong> {{rating.rating1}}</div>
+							<div><strong>Rating 2:</strong> {{rating.rating2}}</div> -->
+							<div star-rating ng-model="rating.rating2" readonly="true" on-rating-select="rating.rateFunction(rating)"></div>
+					</div>
+				</p>
 				<p class="price-block"> 
 					<span class="price regular-price {{ product.special_price > 0? 'strickeout':'' }}"><i class="fa fa-inr"></i>{{ product.price }}</span> 
 					<span class="price special-price" ng-show="product.special_price > 0"><i class="fa fa-inr"></i>{{ product.special_price }}</span> 
