--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -31,16 +31,16 @@
 				<p class="product-name"> <b> <a href="#/products/{{activeCategory._id}}/{{product._id}}"> {{ product.name }} </a> </b> </p>		
 				<p>
 					<div class="average-rating" ng-controller="ratingController as rating">
-							<!-- <div star-rating ng-model="rating.rating1" max="10" on-rating-select="rating.rateFunction(rating)"></div> -->
-							<!-- <div star-rating ng-model="rating.rating2" readonly="rating.isReadonly" on-rating-select="rating.rateFunction(rating)"></div> -->
-							<!-- <label>
+							 <!--<div star-rating ng-model="rating.rating1" max="10" on-rating-select="rating.rateFunction(rating)"></div> 
+							 <div star-rating ng-model="rating.rating2" readonly="rating.isReadonly" ></div>
+							 <label>
 								<input type="checkbox" ng-model="rating.isReadonly"/>
 								Is Readonly
 							</label>
 
 							<div><strong>Rating 1:</strong> {{rating.rating1}}</div>
 							<div><strong>Rating 2:</strong> {{rating.rating2}}</div> -->
-							<div star-rating ng-model="rating.rating2" readonly="true" on-rating-select="rating.rateFunction(rating)"></div>
+							 <div star-rating ng-model="rating.rating2" readonly="true" max="5"></div> 
 					</div>
 				</p>
 				<p class="price-block"> 
@@ -57,7 +57,9 @@
 				<p>
 					<button class="btn btn-primary"> <i class="fa fa-shopping-cart"></i> Add To Cart </button> 
 					<button class="btn btn-primary"><i class="fa fa-heart"></i> Add To Wishlist </button>
-					<button class="btn btn-primary"><i class="fa fa-signal"></i> Add To Compare </button>
+					<p>
+						<button class="btn btn-primary"><i class="fa fa-signal"></i> Add To Compare </button>
+					</p>
 				</p>
 				
 				
