--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -111,6 +111,7 @@ section, footer, header, aside, nav{
 .product-list-view{
 	text-align: left;
 }
+.product-grid-view{ text-align:center;}
 
 .product-grid-view:hover{
 	box-shadow:0px 0px 1px #9d9d9d;
@@ -155,6 +156,9 @@ section, footer, header, aside, nav{
 }
 .thumbnail-view .product-wrapper{
 	height:85px;
+}
+.divider{
+	margin:0;
 }
 
 @media screen and (max-width: 768px){
@@ -238,26 +242,4 @@ section, footer, header, aside, nav{
 .star-rating.readonly .star.filled{
 	 /*color: #666;*/ /* different star color for readonly mode */
 }
-
-/*
-@media screen and (min-width: 480px ){
-	.full-mode-preview .product-image-wrapper{
-		height:320px;
-	}
-}
-@media screen and (min-width: 768px ){
-	.full-mode-preview .product-image-wrapper{
-		height:480px;
-	}
-}
-@media screen and (min-width: 992px ){
-	.full-mode-preview .product-image-wrapper{
-		height:768px;
-	}
-}
-@media screen and (min-width: 1171px ){
-	.full-mode-preview .product-image-wrapper{
-		height:992px;
-	}
-}*/
 
