--- a/app/frontend/views/product-full-mode.html
+++ b/app/frontend/views/product-full-mode.html
@@ -3,42 +3,18 @@
 	<div  class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<a href="#/products/{{activeCategory._id}}/{{activeProduct._id}}" class="pull-right" style="position:fixed;top:5px;right:5px;">  <i class="fa fa-times fa-lg"></i> </a> 
+				<a href="#/products/{{activeCategory._id}}/{{activeProduct._id}}" class="pull-right" style="position:fixed;top:5px;right:5px;display:block;z-index:2;width:40px;height:40px;">  <img src="../assets/images/close.png"  border="0" alt="" style="max-width:100%;max-height:100%;height:auto;width:auto;"> </a> 
 			</div>
 		</div>
 		<div class="row">
 			<div  class="col-sm-12">
 				<div data="activeProduct.images" slick-slider="{dots: true, arrows: false, draggable: true, slidesToShow:1, infinite:false}"  slider-product-view >
-					<div class="product-image-wrapper" ng-repeat="image in activeProduct.images" on-finish-render-filters>
-						<img ng-src="{{ image.url }}" class="product-image"  />
+					<div class="product-image-wrapper" ng-repeat="image in activeProduct.images" on-finish-render-filters  >
+						<img ng-src="{{ image.url }}" class="product-image" />
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- <div  class="row">
-			<div  class="col-sm-12">
-				<div  class="contianer">
-					<div  class="row">
-						<div  class="col-sm-3">
-							<div class="thumbnail-view clearfix" data="activeProduct.images" slick-slider="{dots: false, arrows: true, vertical, true, draggable: false, slidesToShow:4, slidesToScroll:4, infinite:false, responsive: [{ breakpoint: 1170, settings: { slidesToShow: 4, slidesToScroll: 4 } }, { breakpoint: 992, settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 768,  settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 480, settings: { slidesToShow: 1,  slidesToScroll: 1 } } ] }" auto-slide-thumb >
-								<div class="product-wrapper" ng-repeat="image in activeProduct.images" >
-									<div class="thumbnail-box">
-										<a href="" class="{{ activeSlide === $index?'active':''}}" ng-click="switchThumbView( $index )" ><img ng-src="{{ image.url }}" /></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div  class="col-sm-9">
-							<div data="activeProduct.images" slick-slider="{dots: false, arrows: false, draggable: true, slidesToShow:1, infinite:false}"  slider-product-view >
-								<div class="product-image-wrapper" ng-repeat="image in activeProduct.images" on-finish-render-filters>
-									<img ng-src="{{ image.url }}" class="product-image"  />
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> -->
 		<div class="row">
 			<div class="col-sm-12">
 				<a href="#/products/{{activeCategory._id}}/{{activeProduct._id}}" >  Go Back </a> 
