--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -22,7 +22,7 @@
 			<div class="col-xs-12">
 				<div class="bar">
 					<div class="pull-left">
-						 <div class="btn-group">
+						 <!-- <div class="btn-group">
 						  <button type="button" class="btn btn-primary"> <i class="fa fa-filter"></i> {{ activeFilter.caption || 'Sort By'}}</button>
 						  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							<span class="caret"></span>
@@ -31,7 +31,15 @@
 						  <ul class="dropdown-menu">
 							<li ng-repeat="filter in filters">  <a href="" ng-click="setActiveFilter( filter )" > {{ filter.caption }} </a> </li>
 						  </ul>
-						</div> 
+						</div>  -->
+						<div class="btn-group" uib-dropdown >
+						  <button type="button" class="btn btn-primary" uib-dropdown-toggle >
+							{{ activeFilter.caption || 'Sort By'}}  <span class="caret"></span>
+						  </button>
+						  <ul class="dropdown-menu" uib-dropdown-menu role="menu" >
+							<li ng-repeat="filter in filters" role="menuitem">  <a href="" ng-click="setActiveFilter( filter )" > {{ filter.caption }} </a> </li>
+							</ul>
+						</div>
 						<a href="" ng-click="resetFilter()" > <i class="fa fa-refresh"></i> </a>
 					</div>
 					<a class="view list-icon" ng-class="{active: layout == 'list'}" ng-click="layout = 'list'"></a>
