--- a/app/frontend/templates/product-grid-view.html
+++ b/app/frontend/templates/product-grid-view.html
@@ -9,8 +9,8 @@
 		<span class="price special-price" ng-show="product.special_price > 0"><i class="fa fa-inr"></i>{{ product.special_price }}</span> 
 	</p>
 	<p>
-		<button class="btn btn-primary"> <i class="fa fa-shopping-cart"></i>  Add To Cart </button>
-		<!-- <button class="btn btn-primary"><i class="fa fa-heart"></i> </button>
- -->	</p>
+		<button class="btn btn-primary" ng-hide="!product.in_stock"> <i class="fa fa-shopping-cart"></i>  Add To Cart </button>
+		<button class="btn btn-warning" ng-show="!product.in_stock" ng-disabled="true"> <i class="fa fa-shopping-cart" ></i>  Out of Stock </button>
+	</p>
 </section>
 
