--- a/app/frontend/templates/product-list-view.html
+++ b/app/frontend/templates/product-list-view.html
@@ -14,7 +14,8 @@
 				{{ product.short_description }}
 			</p>
 			<p>
-				<button class="btn btn-primary"> <i class="fa fa-shopping-cart"></i> Add To Cart </button> 
+				<button class="btn btn-primary" ng-hide="!product.in_stock"> <i class="fa fa-shopping-cart"></i>  Add To Cart </button>
+				<button class="btn btn-warning" ng-show="!product.in_stock" ng-disabled="true"> <i class="fa fa-shopping-cart" ></i>  Out of Stock </button>
 				<button class="btn btn-primary"><i class="fa fa-heart"></i> Add To Wishlist </button>
 			</p>
 		</div>
