--- a/app/backend/views/products.html
+++ b/app/backend/views/products.html
@@ -9,7 +9,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-3">
-				 <div class="btn-group">
+				 <!-- <div class="btn-group">
 				  <button type="button" class="btn btn-primary"> {{ currentCategory.name || 'Look-up By Category' }} </button>
 				  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<span class="caret"></span>
@@ -18,7 +18,16 @@
 				  <ul class="dropdown-menu">
 					<li ng-repeat="category in categories"><a href="" ng-click="loadCategoryProducts( category )"> {{category.name}} </a></li>
 				  </ul>
-				</div> 
+				</div>  -->
+
+				<div class="btn-group" uib-dropdown >
+				  <button type="button" class="btn btn-primary" uib-dropdown-toggle >
+					{{ activeFilter.caption || 'Look-up By Category'}}  <span class="caret"></span>
+				  </button>
+				  <ul class="dropdown-menu" uib-dropdown-menu role="menu" >
+					<li ng-repeat="category in categories" role="menuitem">  <a href="" ng-click="loadCategoryProducts( category )" > {{category.name}} </a> </li>
+					</ul>
+				</div>
 
 				<a href="" ng-click="currentCategory = {}"> <i class="fa fa-refresh"></i> </a>
 
@@ -49,6 +58,7 @@
 				<thead>
 					<tr>
 						<th> <input type="checkbox" ng-model="selectAll" ng-click="checkAll()"  /> </th>
+						<th> <a href="" class="theader">Product</a> </th>
 						<th> 
 							<a href="" ng-click="sortType = 'name'; sortReverse = !sortReverse" class="theader">
 								Product Name
@@ -113,7 +123,8 @@
 				<tbody>
 					<tr dir-paginate="product in productList | orderBy:sortType:sortReverse | filterProductsByCategory:currentCategory | filter:searchProduct | filter:q | itemsPerPage: pageSize" current-page="currentPage">
 						<td> <input type="checkbox" ng-model="product.selected" ng-click="checkIndividual()" /> </td>
-						<td> {{ product.name }} </td>
+						<td width="85" height="85"> <a href="#/products/edit-view-product/{{ product._id }}">  <img src="{{ product.images | smallImg }}" class="small-image" /> </a>  </td>
+						<td> {{ product.name }}  </td>
 						
 						<!-- <td> {{ product.SKU }} </td>  -->
 						<td> {{ product.date_added | date:"MM/dd/yyyy 'at' h:mma" }} </td>
