--- a/app/backend/templates/category.html
+++ b/app/backend/templates/category.html
@@ -1,11 +1,11 @@
 <div>
 	<div class="form-group">
 		<label for="name"> Category Name : </label>
-		<input type="text" name="name" id="name" class="form-control" ng-model="category.name" ng-disabled="true">
+		<input type="text" name="name" id="name" class="form-control" ng-model="category.name" >
 	</div>
 	<div class="form-group">
 		<label for="url"> Category URL : </label>
-		<input type="text" name="url" id="url" class="form-control" ng-model="category.url" ng-disabled="true">
+		<input type="text" name="url" id="url" class="form-control" ng-model="category.url" >
 	</div>
 	<div class="form-group">
 		<label for="keywords"> keywords : </label>
