--- a/app/backend/views/categories.html
+++ b/app/backend/views/categories.html
@@ -28,7 +28,7 @@
 					<td> {{ category.active | yesNo }} </td>
 					<td> {{ category.created_at | date:"MM/dd/yyyy 'at' h:mma"  }} </td>
 					<td> {{ category.updated_at  | date:"MM/dd/yyyy 'at' h:mma" }} </td>
-					<td> <a href="#/categories/{{category._id}}" class="btn btn-primary"> <!-- <i class="fa fa-pencil"></i> --> View </a>  </td>
+					<td> <a href="#/categories/{{category._id}}" > <!-- <i class="fa fa-pencil"></i> --> View </a>  </td>
 				 </tr>
 			 </tbody>
 		</table>
