--- a/app/backend/templates/product.html
+++ b/app/backend/templates/product.html
@@ -181,6 +181,11 @@
 					</div>
 				</md-content>
 			</md-tab>
+			<md-tab label="Attributes">
+				<md-content class="md-padding">  
+					<h1> Assign Product Attributes </h1>
+				</md-content>
+			</md-tab>
 		</md-tabs>
 	</md-content>
 </div>
