--- a/app/backend/views/products.html
+++ b/app/backend/views/products.html
@@ -134,7 +134,7 @@
 						<td> {{ product.quantity }} </td>
 						<td> {{ product.discontinued | yesNo }} </td>
 						<td> {{ product.in_stock | yesNo}} </td>
-						<td> <a class="btn btn-primary" href="#/products/edit-view-product/{{ product._id }}"> <!-- <i class="fa fa-eye"></i> --> View  </a> </td> 
+						<td> <a href="#/products/edit-view-product/{{ product._id }}"> <!-- <i class="fa fa-eye"></i> --> View  </a> </td> 
 						<!-- <td> <md-button class="md-raised md-primary md-hue-1" ng-href="#/products/edit-view-product/{{ product.id }}"> View </md-button> </td> -->
 						
 					 </tr>
