--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -203,7 +203,7 @@ section, footer, header, aside, nav{
 
 
 .full-mode-preview .product-image-wrapper{
-	width:100%;position:relative;margin:25px auto;
+	width:100%;position:relative;margin:25px auto 5px auto;
 }
 .full-mode-preview .product-image-wrapper .product-image{
 	position:absolute;left:0;top:0;right:0;bottom:0;margin: auto auto;max-width:100%;max-height:100%;height:auto;width:auto;	
