--- a/app/backend/templates/product.html
+++ b/app/backend/templates/product.html
@@ -12,6 +12,14 @@
 						</div>	
 					</div>
 					<div class="row">
+						<div class="col-md-12">
+							<div class="form-group">
+								<label for="title"> Product Title : </label>
+								<input type="text" name="title" id="title" class="form-control" ng-model="product.title">
+							</div>	
+						</div>	
+					</div>
+					<div class="row">
 						<div class="col-md-4">
 							<div class="form-group">
 								<label for="SKU"> SKU ( should be unique ) : </label>
