--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -28,7 +28,7 @@
 				</div> 
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-12">
-				<p class="product-name"> <b> <a href="#/products/{{activeCategory._id}}/{{product._id}}"> {{ product.name }} </a> </b> </p>		
+				<p class="product-name">  <a href="#/products/{{activeCategory._id}}/{{product._id}}">  <span style="font-weight:bold;">{{ product.name }}</span>  <span class="title">{{ product.title }}</span></a></p>	
 				<HR class="divider" />
 				<p>
 					<div class="row">
