--- a/app/frontend/templates/product-list-view.html
+++ b/app/frontend/templates/product-list-view.html
@@ -5,7 +5,7 @@
 			<!-- <a href="" class="product-image-wrapper"> <img src="{{ product.images | smallImg }}" class="product-image" /> </a> -->
 		</div>
 		<div  class="col-md-8 col-sm-8 col-xs-12">
-			<p class="product-name"> <b> <a href="#/products/{{activeCategory._id}}/{{product._id}}"> {{ product.name }} </a> </b> </p>		
+			<p class="product-name">  <a href="#/products/{{activeCategory._id}}/{{product._id}}">  <span style="font-weight:bold;">{{ product.name }}</span>  <span class="title">{{ product.title }}</span></a>   		</p>
 			<p class="price-block"> 
 				<span class="price regular-price {{ product.special_price > 0? 'strickeout':'' }}"><i class="fa fa-inr"></i>{{ product.price }}</span> 
 				<span class="price special-price" ng-show="product.special_price > 0"><i class="fa fa-inr"></i>{{ product.special_price }}</span> 
