--- a/app/backend/views/products.html
+++ b/app/backend/views/products.html
@@ -54,9 +54,7 @@
 					<li role="menuitem">  <a href="" ng-click="pageSize = 25" > 25 </a> </li>
 					</ul>
 				</div>
-				<span style="line-height:34px;" class="pull-right"> ({{ productList.length }}) Products </span>
-				<!-- <label for="search"> Records/Page </label> -->
-				<!-- <input type="number" min="1" max="100" class="form-control" ng-model="pageSize"> -->
+				<span style="line-height:34px;" class="pull-right"> (<span style="font-weight:bold;">{{ productList.length }}</span>) Products </span>
 			</div>
 		</div>
 	</div>
