--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -33,7 +33,7 @@
 						  </ul>
 						</div>  -->
 						<div class="btn-group" uib-dropdown >
-						  <button type="button" class="btn btn-primary" uib-dropdown-toggle >
+						  <button type="button" class="btn btn-default" uib-dropdown-toggle >
 							{{ activeFilter.caption || 'Sort By'}}  <span class="caret"></span>
 						  </button>
 						  <ul class="dropdown-menu" uib-dropdown-menu role="menu" >
