--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -3,6 +3,10 @@
 	padding:0;
 }
 
+body, html{
+	height:100%;min-height:100%;
+}
+
 body{
 	font:15px/1.3 'Open Sans', sans-serif;
 	color: #5e5b64;
@@ -232,6 +236,7 @@ section, footer, header, aside, nav{
     list-style-type: none;
     display: inline-block;
     cursor: pointer;
+	outline:none;
 }
 .star-rating.readonly .star{
 	cursor: default;
@@ -243,3 +248,20 @@ section, footer, header, aside, nav{
 	 /*color: #666;*/ /* different star color for readonly mode */
 }
 
+.footer{
+	 position: absolute;
+    bottom: 0;
+    width: 100%;
+    max-height: 60px;
+    background-color: #f5f5f5;
+}
+
+.footer .container .text-muted{
+	margin: 15px 0;
+}
+.wrapper{
+	min-height:100%;
+	position:relative;
+	padding: 0 0 60px;
+	overflow:auto;
+}
