--- a/app/backend/views/edit-view-attribute.html
+++ b/app/backend/views/edit-view-attribute.html
@@ -10,7 +10,7 @@
 	</div>
 	<form ng-submit="updateAttribute( attribute )" method="POST" role="form">
 		<attribute></attribute>
-		<!-- <button type="submit" class="btn btn-primary"> <i class="fa fa-floppy-o"></i> Update </button> -->
+		<button type="submit" class="btn btn-primary"> <i class="fa fa-floppy-o"></i> Update </button> 
 		<a href="#attributes" class="pull-right">Go Back</a>
 	</form>
 </div>
