--- a/app/backend/views/attribute-sets.html
+++ b/app/backend/views/attribute-sets.html
@@ -4,6 +4,11 @@
 	</div>
 </div>
 
+<div class="container">
+	<a class="btn btn-primary" href="#/attribute-sets/add-new"> <i class="fa fa-plus"></i> Add New Set </a>
+	
+</div>
+
 <!-- <loader></loader>
 <div class="attribute-page" ng-hide="loading">
 	<div class="container" ng-show="attributes.length>0">
@@ -28,4 +33,3 @@
 		<a class="btn btn-primary" href="#/attributes/add-new"> <i class="fa fa-plus"></i> Add New </a>
 	</div>
 </div>
- -->
