--- a/app/backend/views/add-new-set.html
+++ b/app/backend/views/add-new-set.html
@@ -4,21 +4,55 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="row">
-		<div class="col-md-6">
-			<h4> Available Attributes </h4>
-			<ul style="margin:0;padding:0;list-style:none;">
-				<li ng-repeat="at in attributes" > <a href="" style="padding:10px 15px;text-decoration:none;display:block;" > {{ at.label }}</a> </li>
-			</ul>
+<loader></loader>
+<div class="container" ng-hide="loading">
+	 <div class="alert alert-success" ng-show="addSuccess">
+	  <strong>Success!</strong> New Attribute Set Added Successfully!
+	</div> 
+	
+	<form ng-submit="addNewAttributeSet( set )" method="POST" role="form">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="form-group">
+					<label for="name"> Set Name : </label>
+					<input type="text" name="name" id="name" class="form-control" ng-model="set.name">
+				</div>	
+			</div>	
 		</div>
-		<div class="col-md-6">
-			<h4> Selected Attributes </h4>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">  Attributes Available </div>
+					<div class="panel-body">
+						<ul style="margin:0;padding:0;list-style:none;">
+							<li ng-repeat="at in set.attributesAvailable | orderBy:'label' " > <label class="input"> <input type="checkbox" ng-model="at.selected" ng-click="updateAttributesSelection( at )"> <span class="">{{ at.label }}</span> </label>  </li>
+						</ul>
+					</div>
+				  </div>
+			</div>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-heading">  Attributes Selected </div>
+					<div class="panel-body"> 
+						<ul style="margin:0;padding:0;list-style:none;">
+							<li ng-repeat="at in set.attributesChosen | orderBy:'label'" > <label class="input"> <span class="">{{ at.label }}</span> </label>  </li>
+						</ul>
+					</div>
+				  </div>				
+			</div>
 		</div>
-	</div>
+		<button class="btn btn-default" ng-click="selectAll()" > Select All </button>
+		<button class="btn btn-default" ng-click="deSelectAll()" ng-disabled="set.attributesChosen.length==0"> Clear All </button>
+		<button type="submit" class="btn btn-primary" ng-disabled="set.attributesChosen.length==0"> Save Attribute Set</button>
+	</form>
 </div>
 <div class="container">
-	<a class="btn btn-primary" href="#/attributes/">  Manage Attributes </a> 
-	<a class="btn btn-primary" href="#/attributes/add-new">  Add New Attribute </a> 
+	<hr/>
+</div>
+
+<div class="container">
+	<a class="btn btn-default" href="#/attributes/">  Manage Attributes </a> 
+	<a class="btn btn-default" href="#/attributes/add-new">  Add New Attribute </a> 
+
 	<a class="pull-right" href="#/attribute-sets/">  Go back </a> 
 </div>
