--- a/app/backend/views/edit-view-set.html
+++ b/app/backend/views/edit-view-set.html
@@ -1,16 +1,16 @@
 <div class="container">
 	<div class="jumbotron text-center">
-		 <h1> <i class="fa fa-tags"></i> Add New Attribute Set </h1>
+		 <h1> <i class="fa fa-tags"></i> Update Attribute Set </h1>
 	</div>
 </div>
 
 <loader></loader>
 <div class="container" ng-hide="loading">
 	 <div class="alert alert-success" ng-show="success">
-	  <strong>Success!</strong> New Attribute Set Added Successfully!
+	  <strong>Success!</strong> Attribute Set Updated Successfully!
 	</div> 
 	
-	<form ng-submit="addNew( set )" ng-init="loadDefaults()" method="POST" role="form">
+	<form ng-submit="updateOneById( set )" ng-init="loadDefaults()" method="POST" role="form">
 		<attribute-set></attribute-set>
 		<button class="btn btn-default" ng-click="selectAll()" > Select All </button>
 		<button class="btn btn-default" ng-click="deSelectAll()" ng-disabled="set.attributes.length==0"> Clear All </button>
