--- a/app/backend/views/edit-view-set.html
+++ b/app/backend/views/edit-view-set.html
@@ -5,25 +5,27 @@
 </div>
 
 <loader></loader>
-<div class="container" ng-hide="loading">
-	 <div class="alert alert-success" ng-show="success">
-	  <strong>Success!</strong> Attribute Set Updated Successfully!
-	</div> 
-	
-	<form ng-submit="updateOneById( set )" ng-init="loadDefaults()" method="POST" role="form">
-		<attribute-set></attribute-set>
-		<a class="btn btn-default" ng-click="selectAll()" href=""> Select All </a>
-		<a class="btn btn-default" ng-click="deSelectAll()" ng-disabled="set.attributes.length==0" href=""> Clear All </a>
-		<button type="submit" class="btn btn-primary" ng-disabled="set.attributes.length==0"> Save Attribute Set</button>
-	</form>
-</div>
-<div class="container">
-	<hr/>
+<div ng-hide="loading">
+	<div class="container" >
+		 <div class="alert alert-success" ng-show="success">
+		  <strong>Success!</strong> Attribute Set Updated Successfully!
+		</div> 
+		
+		<form ng-submit="updateOneById( set )" ng-init="loadDefaults()" method="POST" role="form">
+			<attribute-set></attribute-set>
+			<a class="btn btn-default" ng-click="selectAll()" href=""> Select All </a>
+			<a class="btn btn-default" ng-click="deSelectAll()" ng-disabled="set.attributes.length==0" href=""> Clear All </a>
+			<button type="submit" class="btn btn-primary" ng-disabled="set.attributes.length==0"> Save Attribute Set</button>
+		</form>
+	</div>
+	<div class="container">
+		<hr/>
+	</div>
+
+	<div class="container">
+		<a class="btn btn-default" href="#/attributes/">  Manage Attributes </a> 
+		<a class="btn btn-default" href="#/attributes/add-new">  Add New Attribute </a> 
+		<a class="pull-right" href="#/attribute-sets/">  Go back </a> 
+	</div>
 </div>
 
-<div class="container">
-	<a class="btn btn-default" href="#/attributes/">  Manage Attributes </a> 
-	<a class="btn btn-default" href="#/attributes/add-new">  Add New Attribute </a> 
-
-	<a class="pull-right" href="#/attribute-sets/">  Go back </a> 
-</div>
