--- a/app/backend/templates/set.html
+++ b/app/backend/templates/set.html
@@ -31,7 +31,7 @@
 			  </div>				
 		</div>
 	</div>
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-md-6">
 			  <h3>Final Data Array</h3>
 			  <pre>{{ set.attributes | json}}</pre>
@@ -40,5 +40,5 @@
 			  <h3>All Checkboxes Array</h3>
 			  <pre>{{ attributesAvailable | json}}</pre>
 		</div>
-	</div>
+	</div> -->
 </div>
