--- a/app/backend/views/add-new-category.html
+++ b/app/backend/views/add-new-category.html
@@ -3,11 +3,9 @@
 		 <h1> <i class="fa fa-tags"></i> Add New Category </h1>
 	</div>
 </div>
-
-<div class="container" ng-init="loadDefaults()">
-	<div class="alert alert-success" ng-show="success">
-	  <strong>Success!</strong> New Category Added Successfully!
-	</div>
+<loader></loader>
+<div class="container" ng-init="loadDefaults()" ng-hide="loading">
+	<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)">{{alert.msg}}</uib-alert>
 	<form ng-submit="addNewCategory( category )" method="POST" role="form">
 		<category></category>
 		<button type="submit" class="btn btn-primary"> <i class="fa fa-floppy-o"></i> Save </button>
