--- a/app/backend/views/attributes.html
+++ b/app/backend/views/attributes.html
@@ -7,9 +7,8 @@
 <loader></loader>
 <div class="attribute-page" ng-hide="loading">
 	<div class="container" >
-		<div class="alert alert-danger" ng-show="deletionSuccess">
-		  <strong>{{ deleteCount }} </strong> Attribute(s) deleted successfully!
-		</div>
+		
+		<uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)"> {{ deleteCount }} {{alert.msg}}</uib-alert>
 		<table class="table table-striped" ng-show="attributes.length>0">
 			<thead>
 				<tr>
