--- a/app/backend/templates/product.html
+++ b/app/backend/templates/product.html
@@ -192,7 +192,7 @@
 			<md-tab label="Attributes">
 				<md-content class="md-padding">  
 					<h1> Assign Product Attributes </h1>
-					<a href="#/attribute-set" class="btn btn-primary"> Manage Attribute Set </a>
+					<!-- <a href="#/attribute-set" class="btn btn-primary"> Manage Attribute Set </a> -->
 				</md-content>
 			</md-tab>
 		</md-tabs>
