--- a/app/backend/templates/set.html
+++ b/app/backend/templates/set.html
@@ -10,10 +10,10 @@
 	<div class="row">
 		<div class="col-md-6">
 			<div class="panel panel-default">
-				<div class="panel-heading">  Attributes Available </div>
+				<div class="panel-heading">  Attributes Available <span class="pull-right"> Total {{ attributesAvailable.length }} Attributes </span> <input type="text" class="form-control" placeholder="Look up for Attributes.." ng-model="searchAttributes" style="max-width:220px;margin:5px;" > </div>
 				<div class="panel-body">
 					<ul style="margin:0;padding:0;list-style:none;">
-						<li ng-repeat="item in attributesAvailable | orderBy:'label' " ng-init="bool[$index] = isChecked( item._id )"  > 
+						<li ng-repeat="item in attributesAvailable | filter:searchAttributes | orderBy:'label'" ng-init="bool[$index] = isChecked( item._id )"  > 
 							<label class="input" > <input type="checkbox" ng-change="sync(bool[$index], item)" ng-model="bool[$index]" ng-checked="isChecked(item._id)"> <span class="">{{ item.label }}</span> </label>
 						</li>
 					</ul>
@@ -22,10 +22,10 @@
 		</div>
 		<div class="col-md-6">
 			<div class="panel panel-default">
-				<div class="panel-heading">  Attributes Selected </div>
+				<div class="panel-heading">  Attributes Selected <span class="pull-right"> ({{ set.attributes.length }}) of {{ attributesAvailable.length }} </span></div>
 				<div class="panel-body"> 
 					<ul style="margin:0;padding:0;list-style:none;">
-						<li ng-repeat="item in set.attributes | orderBy:'label'" > <label class="input"> <span class="">{{ item.label }}</span> </label>  </li>
+						<li ng-repeat="item in set.attributes | orderBy:'label'" > <label class="input"> <span >{{ item.label }}</span> </label>  </li>
 					</ul> 
 				</div>
 			  </div>				
