--- a/app/backend/templates/product.html
+++ b/app/backend/templates/product.html
@@ -208,18 +208,26 @@
 						</div>
 						<div class="col-md-9">
 							<!-- <pre>{{ setChosen | json}}</pre>	 -->	
-							<div class="panel panel-default" ng-repeat="set in setChosen">
+							<div class="jumbotron text-center" ng-hide="setChosen.length > 0">
+								<h2> No attribute-set chosen so far! </h2>
+							</div>
+							<div class="panel panel-default" ng-repeat="set in setChosen" ng-show="setChosen.length > 0">
 								<div class="panel-heading"> {{ set.name }} </div>
 								<div class="panel-body"> 
 									<!-- <pre >{{ set | json }}</pre> -->
-									<div class="row" ng-repeat="at in set.attributes">
-										<div class="col-md-12" >
-											<div class="form-group">
-												<span class="fwb"> {{ at.label }} </span>
-												<input type="text" class="form-control" > 
-											</div>	
-										</div>	
-									</div>
+									<form class="form-horizontal" role="form">
+										<div class="form-group clearfix" ng-repeat="at in set.attributes">
+										  <label class="control-label col-sm-4" for="{{ at.code }}"> {{ at.label }} </label>
+										  <div class="col-sm-8">
+											<input type="text" class="form-control" id="{{ at.code }}" placeholder="Enter {{ at.label }}">
+										  </div>
+										</div>
+										<div class="form-group clearfix">        
+										  <div class="col-sm-12">
+											<a type="submit" class="btn btn-default pull-right" href="">Submit</a>
+										  </div>
+										</div>
+									</form>
 								</div>
 							 </div>				
 						</div>
