--- a/app/backend/templates/product.html
+++ b/app/backend/templates/product.html
@@ -211,10 +211,29 @@
 							<div class="jumbotron text-center" ng-hide="setChosen.length > 0">
 								<h2> No attribute-set chosen so far! </h2>
 							</div>
-							<div class="panel panel-default" ng-repeat="set in setChosen" ng-show="setChosen.length > 0">
+							<uib-accordion close-others="oneAtATime" ng-show="setChosen.length > 0">
+								<!-- <uib-accordion-group heading="Static Header, initially expanded" is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
+								  This content is straight in the template.
+								</uib-accordion-group> -->
+								<uib-accordion-group heading="{{ set.name }}" ng-repeat="set in setChosen">
+								  <form class="form-horizontal" role="form">
+										<div class="form-group clearfix" ng-repeat="at in set.attributes">
+										  <label class="control-label col-sm-4" for="{{ at.code }}"> {{ at.label }} </label>
+										  <div class="col-sm-8">
+											<input type="text" class="form-control" id="{{ at.code }}" placeholder="Enter {{ at.label }}">
+										  </div>
+										</div>
+										<div class="form-group clearfix">        
+										  <div class="col-sm-12">
+											<a type="submit" class="btn btn-default pull-right" href="">Submit</a>
+										  </div>
+										</div>
+									</form>
+								</uib-accordion-group>
+							 </uib-accordion>
+							<!-- <div class="panel panel-default" ng-repeat="set in setChosen" ng-show="setChosen.length > 0">
 								<div class="panel-heading"> {{ set.name }} </div>
 								<div class="panel-body"> 
-									<!-- <pre >{{ set | json }}</pre> -->
 									<form class="form-horizontal" role="form">
 										<div class="form-group clearfix" ng-repeat="at in set.attributes">
 										  <label class="control-label col-sm-4" for="{{ at.code }}"> {{ at.label }} </label>
@@ -229,12 +248,16 @@
 										</div>
 									</form>
 								</div>
-							 </div>				
+							 </div>				 -->
 						</div>
 					</div>
+					<!-- <pre >{{ set | json }}</pre> -->
+									
 					<!-- <a href="#/attribute-set" class="btn btn-primary"> Manage Attribute Set </a> -->
 				</md-content>
 			</md-tab>
 		</md-tabs>
 	</md-content>
 </div>
+
+<!-- https://angular-ui.github.io/bootstrap/#/accordion -->
