--- a/app/backend/templates/product.html
+++ b/app/backend/templates/product.html
@@ -196,6 +196,9 @@
 							<div class="panel panel-default">
 								<div class="panel-heading clearfix">  
 									<span class="fwb"> Sets Available/ Chosen </span>
+									<div  class="pull-right">
+										<span class=""> {{ setChosen.length }} </span> of <span class=""> {{ availableAttributeSets.length }} </span>
+									</div>
 								</div>
 								<div class="panel-body mxh310">
 									<ul style="margin:0;padding:0;list-style:none;">
@@ -211,16 +214,21 @@
 							<div class="jumbotron text-center" ng-hide="setChosen.length > 0">
 								<h2> No attribute-set chosen so far! </h2>
 							</div>
-							<uib-accordion close-others="oneAtATime" ng-show="setChosen.length > 0">
+							<uib-accordion close-others="true" ng-show="setChosen.length > 0">
 								<!-- <uib-accordion-group heading="Static Header, initially expanded" is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
 								  This content is straight in the template.
 								</uib-accordion-group> -->
-								<uib-accordion-group heading="{{ set.name }}" ng-repeat="set in setChosen">
+								<!-- <uib-accordion-group heading="{{ set.name }}" ng-repeat="set in setChosen"> -->
+								<uib-accordion-group ng-repeat="set in setChosen">
+									<uib-accordion-heading >
+										 {{ set.name }} <!-- <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status[$index].open, 'glyphicon-chevron-right': !status[$index].open}"></i> -->
+									  </uib-accordion-heading>
 								  <form class="form-horizontal" role="form">
 										<div class="form-group clearfix" ng-repeat="at in set.attributes">
 										  <label class="control-label col-sm-4" for="{{ at.code }}"> {{ at.label }} </label>
 										  <div class="col-sm-8">
-											<input type="text" class="form-control" id="{{ at.code }}" placeholder="Enter {{ at.label }}">
+											<input type="text" class="form-control" id="{{ at.code }}" ng-if="at.type === 'Open Text'" placeholder="Enter {{ at.label }}">
+											<a class="btn btn-primary" href="" ng-if="at.type === 'Single Choice'"> Add New {{ at.label }} </a>
 										  </div>
 										</div>
 										<div class="form-group clearfix">        
@@ -231,24 +239,6 @@
 									</form>
 								</uib-accordion-group>
 							 </uib-accordion>
-							<!-- <div class="panel panel-default" ng-repeat="set in setChosen" ng-show="setChosen.length > 0">
-								<div class="panel-heading"> {{ set.name }} </div>
-								<div class="panel-body"> 
-									<form class="form-horizontal" role="form">
-										<div class="form-group clearfix" ng-repeat="at in set.attributes">
-										  <label class="control-label col-sm-4" for="{{ at.code }}"> {{ at.label }} </label>
-										  <div class="col-sm-8">
-											<input type="text" class="form-control" id="{{ at.code }}" placeholder="Enter {{ at.label }}">
-										  </div>
-										</div>
-										<div class="form-group clearfix">        
-										  <div class="col-sm-12">
-											<a type="submit" class="btn btn-default pull-right" href="">Submit</a>
-										  </div>
-										</div>
-									</form>
-								</div>
-							 </div>				 -->
 						</div>
 					</div>
 					<!-- <pre >{{ set | json }}</pre> -->
