--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -16,9 +16,6 @@
 						<a href="#/products/{{activeCategory._id}}/{{product._id}}/fullmode" > <img ng-src="{{ image.url }}" class="product-image"  /> </a>
 					</div>
 				</div>
-
-				<!-- <h1>activeSlide : {{ activeSlide }}</h1>  -->
-
 				 <div class="thumbnail-view clearfix" data="product.images" slick-slider="{dots: false, arrows: true, draggable: false, slidesToShow:4, slidesToScroll:4, infinite:false, responsive: [{ breakpoint: 1170, settings: { slidesToShow: 4, slidesToScroll: 4 } }, { breakpoint: 992, settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 768,  settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 480, settings: { slidesToShow: 1,  slidesToScroll: 1 } } ] }" auto-slide-thumb >
 					<div class="product-wrapper" ng-repeat="image in product.images" >
 						<div class="thumbnail-box">
@@ -30,21 +27,36 @@
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<p class="product-name">  <a href="#/products/{{activeCategory._id}}/{{product._id}}">  <span style="font-weight:bold;">{{ product.name }}</span>  <span class="title">{{ product.title }}</span></a></p>	
 				<HR class="divider" />
-				<p>
+				<div ng-controller="ratingController" >
 					<div class="row">
 						<div class="col-lg-3">
-							<div class="average-rating" ng-controller="ratingController as rating">
+							<!-- <div class="average-rating" ng-controller="ratingController as rating">
 								 <div star-rating ng-model="rating.averageRating" readonly="true" max="5" on-rating-select="rating.rateFunction(rating)"></div> 
+							</div> -->
+							<div >
+							  <div class="average">
+								<average-star-rating ng-model="averageRating" max="5"><average-star-rating>    
+							  </div>
 							</div>
 						</div>
 						<div class="col-lg-3">
+							<a href="" style="line-height:28px;"> ({{ averageRating | number:1}})</a>
 							<a href="" style="line-height:28px;"> 0 Reviews </a>
 						</div>
 						<div  class="col-lg-3">
 							<a href="" style="line-height:28px;"> Write a Review </a>
 						</div>	
 					</div>
-				</p>
+					<!-- <div class="row">
+						<div class="col-md-12">
+							<div class="" style="display:block;">
+								User 1 rating <star-rating ng-model="user1" ></star-rating>[ {{ user1.rating }} ]<br/>
+								User 2 rating <star-rating ng-model="user2" ></star-rating>[ {{user2.rating}} ]<br/>
+								User 3 rating <star-rating ng-model="user3" ></star-rating>[ {{user3.rating}} ]<br/>
+						  </div>
+						</div>
+					</div> -->
+				</div>
 
 				<p>
 					<div class="price-block"> 
