--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -1,6 +1,6 @@
  <div class="container">
 	<div class="jumbotron text-center">
-		<h3> {{ product.name }} </h3>
+		<h3> {{ product.name }} {{ product.title }} </h3>
 		
 	</div>
 </div>
